# programming-language

./: .gitignore  CMakeLists.txt  PACKAGE_NAMESPACE_PLAN.md  PACKAGE_SYSTEM_PLAN.md  README.md  TODO  build.sh  mog-manifesto.md  mog.toml  package-lock.json  package.json
.github/workflows/: official-packages.yml  site.yml
apps/site/: README.md  astro.config.mjs  package.json
benchmarks/: bench_class_member_access.expr  bench_class_member_access.mog  bench_closures.expr  bench_closures.mog  bench_dict.expr  bench_dict.mog  bench_feature_mix.expr  bench_feature_mix.mog  bench_fibonacci.expr  bench_fibonacci.mog  bench_linked_list.expr  bench_linked_list.mog  bench_matrix.expr  bench_matrix.mog  bench_sieve.expr  bench_sieve.mog  bench_sort.expr  bench_sort.mog  compare_benchmarks.sh  compare_frontend_benchmarks.sh  run_benchmarks.sh  run_python_benchmarks.sh
benchmarks/python/: bench_class_member_access.py  bench_closures.py  bench_dict.py  bench_feature_mix.py  bench_fibonacci.py  bench_linked_list.py  bench_matrix.py  bench_sieve.py  bench_sort.py
examples/: README.md  WINDOW_MANUAL_TEST_PLAN.md  flappy_bird.expr  flappy_bird.mog  test.ts  type_inference.mog  window_events.expr  window_events.mog  window_open.expr  window_open.mog
examples/game/: flappy_bird.mog
examples/game/flappy/: constants.mog  logic.mog  render.mog  state.mog
examples/test/: main-formatted.mog  main.mog
scripts/: profile_callgrind.sh  publish_official_window.sh
src/: Ast.hpp  AstBinder.cpp  AstBinder.hpp  AstBytecodeEmitter.cpp  AstBytecodeEmitter.hpp  AstFrontend.cpp  AstFrontend.hpp  AstOptimizer.cpp  AstOptimizer.hpp  AstOptimizerControlFlow.cpp  AstOptimizerExpr.cpp  AstOptimizerInternal.hpp  AstOptimizerSupport.cpp  AstParser.cpp  AstParser.hpp  AstSemanticAnalyzer.cpp  AstSemanticAnalyzer.hpp  AstSymbolCollector.cpp  AstSymbolCollector.hpp  AstToHirLowering.cpp  AstToHirLowering.hpp  AstTypeChecker.cpp  AstTypeChecker.hpp  Chunk.cpp  Chunk.hpp  Compiler.cpp  Compiler.hpp  DependencySpec.hpp  FrontendDiagnostic.cpp  FrontendDiagnostic.hpp  FrontendInterner.hpp  FrontendTypeUtils.cpp  FrontendTypeUtils.hpp  GC.cpp  GC.hpp  GcObject.hpp  Hir.hpp  HirBytecodeEmitter.cpp  HirBytecodeEmitter.hpp  HirOptimizer.cpp  (+31 more)
src/tooling/: FrontendFormatter.cpp  FrontendTooling.cpp  FrontendTooling.hpp
tests/: ast_emitter_parity.cpp  ast_emitter_regression.cpp  ast_frontend_regression.cpp  ast_parser_smoke.cpp  fail_import_expr_extension.mog  fail_import_native_handle_foreign.expr  fail_import_native_handle_foreign.mog  frontend_benchmark.cpp  frontend_tooling_regression.cpp  sample_and.expr  sample_and.mog  sample_array.expr  sample_array.mog  sample_ast_opt_bitwise_and_zero.mog  sample_ast_opt_bitwise_and_zero_impure_guard.mog  sample_ast_opt_bitwise_and_zero_type_guard.mog  sample_ast_opt_bitwise_shift_fold.mog  sample_ast_opt_bool_equality_identity.mog  sample_ast_opt_bool_equality_realloc_regression.mog  sample_ast_opt_bool_equality_type_guard.mog  sample_ast_opt_break_continue_terminal.mog  sample_ast_opt_comparison_branch_fold.mog  sample_ast_opt_constant_fold.mog  sample_ast_opt_dead_for_decl_init.mog  sample_ast_opt_dead_for_expr_init.mog  sample_ast_opt_dead_if.mog  sample_ast_opt_dead_while.mog  sample_ast_opt_double_not.mog  sample_ast_opt_identity_fold.mog  sample_ast_opt_identity_promotion_guard.mog  sample_ast_opt_import_member_cast_stress.mog  sample_ast_opt_int_double_tilde.mog  sample_ast_opt_logical_impure_guard.mog  sample_ast_opt_logical_pure_drop.mog  sample_ast_opt_logical_rhs_identity.mog  sample_ast_opt_mul_zero.mog  sample_ast_opt_mul_zero_impure_guard.mog  sample_ast_opt_mul_zero_type_guard.mog  sample_ast_opt_no_fold_numeric_guard.mog  sample_ast_opt_no_side_effect_fold.mog  (+203 more)
tests/findings/: fail_cast_downcast_runtime.mog  fail_import_non_string_arg.mog  fail_label_on_non_loop.mog  fail_numeric_overflow_float.mog  fail_numeric_overflow_signed.mog  fail_numeric_overflow_unsigned.mog  fail_strict_line_top_level.mog  sample_cast_downcast_runtime_ok.mog  sample_constructor_field_slot.mog
tests/lexer/: type_keywords.expr  type_keywords.mog
tests/modules/: cache_handle_target.mog  cache_target.expr  cache_target.mog  class_mod.expr  class_mod.mog  cycle_a.expr  cycle_a.mog  cycle_b.expr  cycle_b.mog  frontend_identity_module.mog  frontend_nested_a.mog  frontend_nested_b.mog  frontend_nested_c.mog  math.expr  math.mog  nested_a_module.expr  nested_a_module.mog  nested_b.expr  nested_b.mog  nested_c.expr  nested_c.mog
tests/newline/: fail_newline_call_break.mog  fail_newline_cast_break.mog  fail_newline_index_break.mog  fail_newline_lambda_arrow_break.mog  fail_newline_member_break.mog  fail_newline_operator_break.mog  fail_newline_trailing_comma_call.mog  sample_newline_call_suffix.mog  sample_newline_call_suffix_folded_arg.mog  sample_newline_index_suffix.mog  sample_newline_lambda_body.mog  sample_newline_member_suffix.mog  sample_newline_operator_rhs.mog  sample_newline_prefix_statement.mog  sample_newline_print_grouped_arg.mog
tests/types/errors/: assign_array_str_to_array_i32.mog  assign_dict_value_str_to_bool.expr  assign_dict_value_str_to_bool.mog  assign_handle_foreign_type.expr  assign_handle_foreign_type.mog  assign_null_to_non_optional.expr  assign_null_to_non_optional.mog  assign_str_to_i32.mog  assign_to_const.expr  assign_to_const.mog  bitwise_bool_operand.mog  bitwise_float_operand.mog  closure_assign_to_const.expr  closure_assign_to_const.mog  compound_arithmetic_result_unassignable.mog  compound_assign_to_const.mog  compound_bitwise_result_unassignable.mog  compound_bitwise_to_const.mog  contextual_decimal_to_integer.mog  contextual_numeric_overflow_u8.mog  duplicate_loop_label.mog  foreach_dict_requires_explicit_projection.mog  function_arg_type_mismatch.expr  function_arg_type_mismatch.mog  function_closure_param_count_mismatch.expr  function_closure_param_count_mismatch.mog  import_binding_type_mismatch.mog  lambda_block_body.mog  (+32 more)
tooling/lsp/: mog-lsp.cpp
tooling/vscode-mog/: extension.js  language-configuration.json  package-lock.json  package.json
(+36 files in other folders)
